--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,8 @@
     "chart.js": "^4.4.7",
     "cropperjs": "^1.6.2",
     "draft-js": "^0.11.7",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.4.3",
     "global": "^4.4.0",
     "jwt-decode": "^4.0.0",
@@ -51,7 +53,8 @@
     "slate-history": "^0.110.3",
     "slate-hyperscript": "^0.100.0",
     "slate-react": "^0.112.1",
-    "sweetalert2": "^11.14.5"
+    "sweetalert2": "^11.14.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@svgr/rollup": "^8.1.0",
